Added use of virtual threads instead of a thread pool